Switched to SQLite for Render deployment

--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=Bulky;Trusted_Connection=True; TrustServerCertificate=True"
+        "DefaultConnection": "Data Source=bulky.db"
     },
     "Logging": {
         "LogLevel": {
